Thu Jul 20 19:08:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Progress on the apitest-to-Java script and support stuff.  A
	  few helper functions need adding, but about half of the test
	  functions translate ok.

Thu Jul 20 16:39:00 BST 2000 Olly Betts

	* Tweaks to doxygen makefile stuff.

Thu Jul 20 15:56:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In DEBUGCALL, make sure that "this" is displayed as a pointer,
	  not as the description of an API object.

Thu Jul 20 15:03:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More work on omstringstream, now understands char *, std::endl and
	  std::flush and a few new types.

	* Make omlocks include stdio.h

Thu Jul 20 13:01:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest.pl now has new options:

	  --no-random avoids running the tests with randomly generated junk

	  languages can be specified on the command line to only run tests
	  on one (or more) specified language.

Wed Jul 19 18:14:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a script to convert apitest into other languages.  So far
	  has a mostly working Java backend.

Wed Jul 19 17:38:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Replace om_inttostring and doubletostring by (overloaded)
	  om_tostring methods.  Implement for several other types.

	* Redo om_ostringstream class so that it is self contained, and
	  doesn't depend on the system's streambuf; hopefully enabling
	  us to get debugging output in multithreaded situations...

Wed Jul 19 17:35:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Java apitest now correctly runs test_pctcutoff1, with either
	  the sleepy or inmemory backend.

Wed Jul 19 15:59:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added get_description to Java OmMSet wrapper.

Wed Jul 19 11:17:00 BST 2000 Olly Betts
